--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,6 +1,5 @@
 /*footer exchange*/
-.exchange__footer {
-    background-color: $red;
+.footer {
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
     display: flex;
     justify-content: space-between;
@@ -27,32 +26,4 @@
         }
     }
 }
-/*footer liquidity*/
-.liquidity__footer {
-    background-color: $yellow;
-   /* background-image: linear-gradient(180deg, rgb(255, 215, 0, 0.15), rgb(255, 215, 0));*/
-    display: flex;
-    justify-content: space-between;
-    padding: 3%;
-    align-items: center;
-    &__a {
-        &__img {
-            width: 250px;
-        }
-    }
-    &__strategic {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-right: 11%;
-        &__img {
-            border-radius: 2rem;
-            width: 200px;
-        }
-        &__text {
-            font-size: 1.6rem;
-            color: white;
-            margin-bottom: 8%;
-        }
-    }
-}
+
