--- a/sass/views/_farms.scss
+++ b/sass/views/_farms.scss
@@ -69,3 +69,140 @@
     }
     
 }
+
+.farm__container__flex{
+    display: flex;
+    justify-content: center;
+    .farm__container__grid {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 1rem;
+        &__item {
+            width: 305px;
+            height: 420px;
+            border: solid 1px $border-blanco;
+            padding: 1rem;
+            border-radius: 1.5rem;
+            background-color: white;
+            color: rgb(0, 39, 0);
+            & div {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            &__one {
+                display: flex;
+                flex-direction: column;
+                &__ball {
+                    font-weight: bold;
+                    margin-left: 24px;
+                }
+                &__sub {
+                    
+                    &__core {
+                        border: solid 2px $green;
+                        border-radius: 2rem;
+                        color: $green;
+                        padding: 0 10px 0 10px;
+                        font-size: 0.8rem;
+                        font-weight: 400;
+                    }
+                    &__x {
+                        border-radius: 2rem;
+                        color: white;
+                        background-color: $green;
+                        padding: 1px 6px 1px 6px;
+                        margin-left: 4px;
+                    }
+                }
+            }
+            &__text__bold {
+                font-weight: bold;
+                color: $green;
+            }
+            &__earned {
+                font-size: 0.78rem;
+                font-weight: bold;
+                color: $green;
+                margin-left: 5px;
+            }
+            &__0 {
+                font-weight: bold;
+                color: rgba(0, 0, 0, 0.445);
+                padding: 00.5rem;
+                background-color: rgb(226, 225, 225);
+                width: 120px;
+                border-radius: 1rem ;
+                margin-top: 5px;
+            }
+            &__harvest {
+                background-color: $green;
+                border: 0px;
+                padding: 0.8rem 1rem 0.8rem 1rem;
+                border-radius: 1rem;
+                color: white;
+                font-weight: bold;
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.7;
+                    transition: 0.2s;
+                }
+            }
+            &__wallet__div {
+                border-bottom: 1px solid $border-blanco;
+                padding-bottom: 20px;
+            }
+            &__wallet {
+                width: 100%;
+                background-color: $green;
+                border-radius: 1rem;
+                border: 0;
+                padding: 0.6rem;
+                font-size: 1.2rem;
+                color: white;
+                font-weight: bold;
+                margin: 10px 0 10px 0;
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.7;
+                    transition: 0.2s;
+                }
+            }
+            &__details {
+                margin-left: 40%;
+                margin-top: 20px;
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.7;
+                    transition: 0.2s;
+                }
+            }
+        }
+    }
+}
+.farm__help {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+    &__globo {
+        height: 100px;
+    }
+}
+@media only screen and (max-width: 1024px){
+
+    .farm__container__grid {
+        grid-template-columns: auto auto !important;
+    }
+    .farm__container__top {
+        flex-direction: column;
+        &__left {
+            margin-bottom: 15px;
+        }
+    }
+    @media only screen and (max-width: 776px) {
+        .farm__container__grid {
+            grid-template-columns: auto  !important;
+        }
+    }
+
+}
