--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -76,9 +76,8 @@
         }
     }
 }
-body header nav div div {
+.nav__bar__hover{
     margin-top: 2px;
-    margin-bottom: 2px;
 }
 .nav__bar__dropdown {
     display: none;
