--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,29 +1,60 @@
+@import "../misc/variables";
+@import "../misc/mixins";
 /*footer exchange*/
 .footer {
-    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.144), rgba(255, 255, 255, 0));
+    padding: 2% 8%;
     display: flex;
-    justify-content: space-between;
-    padding: 3%;
+    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    &__a {
-        &__img {
-            width: 250px;
+    & article {
+        display: flex;
+        width: 80%;
+        justify-content: space-between;
+        & div ul {
+            list-style: none;
+            & li a {
+                font-family: pokemon;
+                text-decoration: none;
+                color: white;
+                font-size: 1.2rem;
+                &:hover {
+                    color: black;
+                }
+            }
+            & li h2 {
+                font-family: pokemon;
+                font-size: 2rem !important;
+                margin-bottom: 10px;
+            }
         }
     }
-    &__strategic {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-right: 11%;
-        &__img {
-            border-radius: 2rem;
-            width: 200px;
+    &__img{
+        width: 10%;
+        height: 40px;
+        &__2 {
+            height: 64px;
+            border-radius: 1rem;
         }
-        &__text {
-            font-size: 1.6rem;
-            color: white;
-            margin-bottom: 8%;
+    }
+    & article div ul li h2 {
+        color: #420000;
+        font-size: 1.5rem;
+    }
+    &__li {
+        text-align: center;
+    }
+    &__social {
+        justify-content: flex-start !important;
+
+        & div span:hover {color: white; cursor: pointer;}
+        &__img {
+            height: 1.6rem;
+            cursor: pointer;
         }
     }
 }
-
+.wp {
+    margin-left: 30px;
+}
